# pygame-project

./: .gitignore  README.md  main.py  pyproject.toml
pygame/: main.py
pygame/src/common/: constants.py
pygame/src/decorators/: singleton.py
pygame/src/entities/: entity.py  player.py
pygame/src/factories/: entity_factory.py  game_state_factory.py
pygame/src/game/: game.py
pygame/src/game_states/: game_state.py  test_state.py
pygame/src/managers/: entity_manager.py  game_state_manager.py  map_manager.py
pygame/src/physics/: physics.py
resources/map_files/: test.map
src/common/: constants.py
src/decorators/: singleton.py
src/entities/: enemy.py  entity.py  platform.py  player.py
src/factories/: entity_factory.py  game_state_factory.py
src/game/: game.py
src/game_states/: game_state.py  test_state.py
src/managers/: entity_manager.py  game_state_manager.py  map_manager.py
src/maps/: map.py
src/physics/: physics.py
